force-app/main/default/objects/Projects__c/Projects__c.object-meta.xml
<CustomObject>
    <description>Object Created to store Project Details like Project Status, Completion Status, Name etc.</description>
    <label>Projects</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>