force-app/main/default/objects/Projects__c/fields/CompletePercent__c.field-meta.xml
<CustomField>
    <fullName>CompletePercent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to handle Project Completion Percentage</description>
    <label>% Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>