force-app/main/default/objects/Projects__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Field to enter the project description</description>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>